--- a/car_dealer_portal/templates/car_dealer/home_page.html
+++ b/car_dealer_portal/templates/car_dealer/home_page.html
@@ -13,21 +13,23 @@
 <div class="w3-display-container" style="height:800px;">
   <div class="w3-display-left" style="padding-left: 200px;">
 
-<h3 class="w3-container w3-bar w3-black w3-large" style="padding:8px"><center>Post Vehicles<center></h3>
+    <h3 class="w3-container w3-bar w3-black w3-large" style="padding:8px"><center>Post Vehicles<center></h3>
 
-<form class="w3-container" action="/car_dealer_portal/add_vehicle/" method="post">{% csrf_token %}
-  <lable>Car Name :</lable> <input class="w3-input" type="text" name="car_name"><br><br>
-  <lable>Color :</lable> <input class="w3-input" type="text" name="color"><br><br>
-  <lable>City :</lable> <input class="w3-input" type="text" name="city"><br><br>
-  <lable>Pincode :</lable> <input class="w3-input" type="text" name="pincode"><br><br>
-  <lable>Description :</lable> <input class="w3-input" type="text" name="description"><br><br>
-  <lable>Capacity (Seats) :</lable> <input class="w3-input" type="text" name="capacity"><br><br>
-  <input class="w3-btn w3-green" type="submit" value="Add Vehicle"><br><br>
-<form>
-</div>
+    <form class="w3-container" action="/car_dealer_portal/add_vehicle/" method="post">{% csrf_token %}
+      <label>Car Name :</label> <input class="w3-input" type="text" name="car_name"><br><br>
+      <label>Color :</label> <input class="w3-input" type="text" name="color"><br><br>
+      <label>City :</label> <input class="w3-input" type="text" name="city"><br><br>
+      <label>Pincode :</label> <input class="w3-input" type="text" name="pincode"><br><br>
+      <label>Description :</label> <input class="w3-input" type="text" name="description"><br><br>
+      <label>Capacity (Seats) :</label> <input class="w3-input" type="text" name="capacity"><br><br>
+      <input class="w3-btn w3-green" type="submit" value="Add Vehicle"><br><br>
+    </form>
+  </div>
 
-<div class = "w3-display-right">
-  <img src="{% static "images/car.jpg" %}" width="750px">
+  <div class="w3-display-right">
+    <img src="{% static "images/car.jpg" %}" width="750px">
+  </div>
+
 </div>
 
 {% endblock %}
